# GlobeTrotter

./: .gitignore  pyproject.toml  requirements.txt
globetrotter/: admin.py  apps.py  localsettings.py  models.py  urls.py  utils.py  views.py
globetrotter/static/css/: build.css  build.css.map
globetrotter/static/js/: index.js
globetrotter/static/scss/: base.scss  theme.scss
globetrotter/templates/: 400.html  403.html  404.html  500.html  base-error.html  base-generic.html  index.html
globetrotter/templatetags/: globetrotter_tags.py
main/: settings.py  urls.py  wsgi.py
